# ingest_and_snapshot

./: Cargo.toml
src/: backup_log.rs  backup_log_tests.rs  dummy_ui_data.rs  main.rs  main_tests.rs  mount_manager.rs  per_device_config.rs  per_device_config_tests.rs  snapshot_logic.rs  snapshot_logic_tests.rs  transfer_logic.rs  transfer_logic_tests.rs  transfer_registry.rs  transfer_registry_tests.rs  ui.rs  ui_api.rs  ui_tests.rs
src/ui/: check_terminal_window.rs  mount_list_overlay.rs  status_bar.rs  thumbnails.rs  transfers_window.rs  tui_dialog_widgets.rs  user_actions_window.rs  user_queries_window.rs
