[package]
name = "ingest_and_snapshot"
version = "0.1.0"
edition = "2024"

[features]
dummy-ui-data = []
fps-counter = []
copy-instead-of-move = []
disable-ui-safety-checks = []

[dependencies]
anyhow = "1.0.102"
crossbeam-channel = "0.5"
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
home = "0.5.12"
nix = { version = "0.31.2", features = ["fs", "mount", "term", "signal", "user"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1", features = ["v7", "serde"] }
sysinfo = "0.38.4"
time-format = "1.2.2"
udev = "0.9.3"
vt100 = "0.16.2"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
collapsible-if = "allow"
